# koharu-th

./: .branch-marker  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  FEATURES.md  README.ja.md  README.md  README.th.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  package-lock.json  pr16_body.txt  runtime_manifest.json
.cargo/: config.toml
.github/: CONTRIBUTING.md  FUNDING.yml  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: build.yml  lint.yml  publish.yml  release.yaml  test.yml
docs/: v2-arch.md  v2-progress.md
e2e/: 01-smoke-zoom.spec.ts
koharu/: Cargo.toml  installer-hooks.nsi  tauri.conf.json
koharu-api/: Cargo.toml
koharu-api/src/: commands.rs  lib.rs  method.rs  views.rs
koharu-app/: Cargo.toml
koharu-app/src/: event.rs  history.rs  lib.rs  session.rs
koharu-core/: Cargo.toml  README.md
koharu-core/src/: artifact.rs  blob.rs  hardware.rs  id.rs  lib.rs  op.rs  op_project.rs  project_view.rs  run_options.rs  scene.rs  settings.rs
koharu-core/tests/: proptest_op_roundtrip.proptest-regressions  proptest_op_roundtrip.rs
koharu-engines/: Cargo.toml
koharu-engines/src/: dag.rs  engine.rs  info.rs  lib.rs  probe.rs
koharu-http/src/: hf_hub.rs  http.rs  lib.rs  progress.rs
koharu-ml/: Cargo.toml
koharu-ml/src/: backend.rs  facade.rs  lib.rs  loading.rs  offloader.rs
koharu-ml/src/anime_text/: mod.rs  model.rs  ops.rs
koharu-ml/src/comic_text_detector/: mod.rs  postprocess.rs  yolo_decode.rs
koharu-ml/src/font_detector/: mod.rs
koharu-ml/src/lama/: mod.rs
koharu-ml/src/lama/fft/: cuda.rs  mod.rs
koharu-ml/src/llm/: facade.rs  model.rs  tokenizer.rs
koharu-ml/src/manga_ocr/: mod.rs  model.rs
koharu-ml/src/mit48px_ocr/: mod.rs  model.rs
koharu-ml/tests/: llm.rs  test_directml.rs
koharu-pipeline/: Cargo.toml
koharu-pipeline/src/: dag_integration.rs  engine_bridge.rs  engine_profile.rs  lib.rs  operations.rs  pipeline.rs  session_slot.rs  style_convert.rs
koharu-pipeline/src/engines/: anime_yolo_detector.rs  cloud_llm_translate.rs  cloud_vision_ocr.rs  comic_text_detector.rs  lama_inpaint.rs  local_llm_translate.rs  manga_ocr.rs  mit48px_ocr.rs  mod.rs  text_renderer.rs
koharu-pipeline/src/ops/: chat.rs  core.rs  edit.rs  engines.rs  llm.rs  mod.rs  process.rs  project.rs  queue.rs  session.rs  storage.rs  utils.rs  vision.rs
koharu-project/: Cargo.toml
koharu-project/migrations/: V001__initial_schema.sql  V002__chapter_folders.sql  V003__chat_messages.sql  V004__chat_attachments.sql  V005__tm_embeddings.sql  V006__translation_queue.sql  V007__index_optimization.sql  V007__v2_blob_index.sql
koharu-project/src/: backup.rs  cbz.rs  chapter.rs  character.rs  chat.rs  db.rs  error.rs  fs_atomic.rs  glossary.rs  lib.rs  manifest.rs  migration.rs  profile.rs  project.rs  prompt.rs  queue.rs  recent.rs  secret.rs  series.rs  tm.rs  tm_tmx.rs  tm_vector.rs  types.rs
koharu-project/tests/: v1_to_v2_migration.rs
koharu-renderer/: README.md
koharu-renderer/src/: facade.rs  font.rs  layout.rs  renderer.rs
koharu-renderer/src/text/: script.rs
koharu-rpc/: Cargo.toml
koharu-rpc/src/: rpc.rs  server.rs  shared.rs
koharu-rpc/src/mcp/: helpers.rs  mod.rs
koharu-types/src/: effect.rs  image.rs  lib.rs
koharu/src/: app.rs  lib.rs  main.rs  runtime_install.rs  windows.rs
release-out/: RELEASE_NOTES.md
scripts/: build-all-gpus.sh  dev.ts
ui/: next.config.ts  package.json  tauri-plugins.d.ts  types.d.ts
ui/app/: global-error.tsx  globals.css  providers.tsx
ui/app/(app)/: layout.tsx  page.tsx
ui/app/(app)/about/: page.tsx
ui/app/(app)/project/: layout.tsx  page.tsx
ui/app/splashscreen/: page.tsx
ui/components/: ActivityBubble.tsx  AppErrorBoundary.tsx  Canvas.tsx  ClientOnly.tsx  CommandPalette.tsx  Image.tsx  MenuBar.tsx  Navigator.tsx  Panels.tsx  QueueWidget.tsx  ShortcutsCheatSheetDialog.tsx  SidebarTabs.tsx  UpdateDialog.tsx  Welcome.tsx
ui/components/canvas/: CanvasToolbar.tsx  CollaboratorCursors.tsx  CollaboratorsList.tsx  StatusBar.tsx  TextBlockAnnotations.tsx  TextBlockSpriteLayer.tsx  Workspace.tsx  canvasViewport.ts
ui/components/panels/: HistoryPanel.tsx  NavigatorWidget.tsx  RenderControlsPanel.tsx  TextBlocksPanel.tsx
ui/components/project/: CostDashboard.tsx  EmptyHint.tsx  ExtractEntitiesModal.tsx  ImportGlossaryModal.tsx
ui/components/settings/: AutoBackupManager.tsx  CollaborativeSessionHUD.tsx  ConflictResolutionModal.tsx  DynamicEngineSettingsForm.tsx
ui/components/sidebar/: AntigravityChatOverlay.tsx  AntigravityTaskbar.tsx  ChaptersTabPanel.tsx  CharactersTabPanel.tsx  ChatTabPanel.tsx  EngineSettingsForm.tsx  EnginesTabPanel.tsx  GlossaryTabPanel.tsx  KomorebiChatOverlay.tsx  KomorebiTaskbar.tsx  ProfilesTabPanel.tsx  ProjectTabPanel.tsx  PromptsTabPanel.tsx  chat-markdown.tsx
ui/components/ui/: alert-dialog.tsx  badge.tsx  card.tsx  error-dialog.tsx  kbd.tsx  progress.tsx  searchable-select.tsx
ui/hooks/: useBrushLayerDisplay.ts  useMaskDrawing.ts  useTextBlocks.ts
ui/lib/: api.ts  backend.ts  errors.ts  i18n.ts  rpc-types.ts  rpcSchemas.ts  smartPostProcess.ts  telemetry.ts  thaiPostProcess.ts  util.ts  ws.ts
ui/lib/hooks/: useEngineProfile.ts  useSessionHistory.ts
ui/lib/query/: client.ts  hooks.ts  mutations.ts  projectMutations.ts  queue.ts
ui/lib/services/: aiTools.ts  anthropicModels.ts  autoUpdater.ts  bubbleFit.ts  chapterText.ts  chatSlashCommands.ts  chatWithTools.ts  cloudLlm.ts  cloudOcr.ts  embeddings.ts  geminiModels.ts  imageAttach.ts  migrateEnginePrefs.ts  modelFilters.ts  ollamaModels.ts  openaiModels.ts  openrouterModels.ts  profileHelpers.ts  providerPresets.ts  summarizeChapter.ts  tmBackfill.ts  updateCheck.ts  visionSupport.ts
ui/lib/stores/: chatActivityStore.ts  collabStore.ts  editorUiStore.ts  preferencesStore.ts  projectStore.ts  textStylePresetsStore.ts  uiErrorStore.ts
ui/lib/util/: autoContrast.ts  detectSourceLanguage.ts  postProcess.ts  thaiPostProcess.ts
(+16 files in other folders)
