[package]
name = "koharu-pipeline"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
koharu-api = { workspace = true }
koharu-core = { workspace = true }
koharu-engines = { workspace = true }
koharu-types = { workspace = true }
koharu-ml = { workspace = true }
koharu-project = { workspace = true }
koharu-renderer = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
imageproc = { workspace = true }
once_cell = { workspace = true }
open = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rfd = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
walkdir = "2"

[dev-dependencies]
tempfile = { workspace = true }

# Phase 4 / audit #5 F4: propagate GPU backend features from the
# `koharu` binary all the way down to `koharu-engines` so the
# probe (cudarc / metal-rs) compiles into the released binary
# instead of returning the stub. The koharu binary's `cuda` /
# `metal` features add `koharu-pipeline/cuda` etc. — without
# this passthrough, a `--features cuda` build would still see
# `koharu_engines::probe()` return "nothing detected" because
# the cuda feature never lit up the engines crate.
[features]
default = []
cuda = ["koharu-engines/cuda"]
metal = ["koharu-engines/metal"]
