[package]
name = "koharu-pipeline"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
koharu-api = { workspace = true }
koharu-types = { workspace = true }
koharu-http = { workspace = true }
koharu-ml = { workspace = true }
koharu-project = { workspace = true }
koharu-renderer = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
once_cell = { workspace = true }
open = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rfd = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
libc = { workspace = true }
zip = { workspace = true }
