[package]
name = "koharu-project"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
handlebars = { workspace = true }
keyring = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
